--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">MVVMTest</string>
+    <string name="app_name">My Contacts</string>
+    <string name="contacts">Contacts</string>
+    <string name="account">Me</string>
+    <string name="favorites">Favorites</string>
+    <string name="avatar">avatar</string>
+    <string name="add_to_favorites">add to favorites</string>
 </resources>
