--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="favorites">Favorites</string>
     <string name="avatar">avatar</string>
     <string name="add_to_favorites">add to favorites</string>
+    <string name="add_contact">Add Contact</string>
 </resources>
