--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
     <string name="empty_value">Value is empty</string>
+    <string name="onboarding1">Приложение My Contacts позволит вам хранить список своих контактов в удобном виде</string>
+    <string name="onboarding2">Вы можете добавлять контакты вручную или синхронизировать со списком ваших контактов на телефоне</string>
+    <string name="onboarding3">Вы можете добавлять контакты в избранные</string>
+    <string name="onboarding4">Вы можете легко осуществить звонок, нажав на номер контакта</string>
+    <string name="onboarding5">В разделе Me вы можете посмотреть статистику о себе</string>
 </resources>
