feature - add favorite contacts screen
make OnContactChangeListener.kt functions empty realized
make ContactsAdapter.kt and ContactsDiffCallback.kt together contact_list_utils for contact list screens
set listeners to bottom navigation bar items selection

for contacts list fragment classes there is a lot of copied code - need to move it to the base class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">My Contacts</string>
     <string name="contact_list_title">Contacts</string>
     <string name="onboarding_title">Hello!</string>
+    <string name="favorite_contacts_title">Favorite Contacts</string>
 
     <string name="contacts">Contacts</string>
     <string name="account">Me</string>
