--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,20 @@
 <resources>
+    <!--App Name and Screen Titles-->
     <string name="app_name">My Contacts</string>
     <string name="contact_list_title">Contacts</string>
     <string name="onboarding_title">Hello!</string>
     <string name="favorite_contacts_title">Favorite Contacts</string>
 
+    <!--Bottom Navigation Items-->
     <string name="contacts">Contacts</string>
     <string name="account">Me</string>
     <string name="favorites">Favorites</string>
 
+    <!--Image Descriptions-->
     <string name="avatar">avatar</string>
     <string name="add_to_favorites">add to favorites</string>
 
-    <string name="add_contact">Add Contact</string>
+    <!--Input Contact Dialog-->
     <string name="enter_contacts_name_hint">Enter Contact\'s Name</string>
     <string name="enter_contacts_number_hint">Enter Contact\'s Number</string>
     <string name="input_contact">Input Contact</string>
@@ -19,12 +22,19 @@
     <string name="cancel">Cancel</string>
     <string name="empty_value">Value is empty</string>
 
-
+    <!--OnBoarding Carousel Items-->
     <string name="onboarding1">Приложение My Contacts позволит вам хранить список своих контактов в удобном виде</string>
     <string name="onboarding2">Вы можете добавлять контакты вручную или синхронизировать со списком ваших контактов на телефоне</string>
     <string name="onboarding3">Вы можете добавлять контакты в избранные</string>
     <string name="onboarding4">Вы можете легко осуществить звонок, нажав на номер контакта</string>
     <string name="onboarding5">В разделе Me вы можете посмотреть статистику о себе</string>
 
-    <string name="next">next</string>
+    <!--Toolbar Custom Action Descriptions-->
+    <string name="add_contact">Add Contact</string>
+    <string name="next">Next</string>
+
+    <!--Contact PopupMenu Item Titles-->
+    <string name="change_data">Change Contact Data</string>
+    <string name="call_contact">Call Contact</string>
+    <string name="delete_contact">Delete Contact</string>
 </resources>
