feature - add Jetpack Navigation Component to app
add empty profile screen

extract tab fragments container to TabsFragment.kt
create navigation graphs
bind bottom navigation view with nav component in TabsFragment.kt
add safe args (to ContactInputDialogFragment.kt)
change navigation in whole project

bugs:
1) toolbar custom actions appear only on the second creation of the fragment
2) screen rotation on onboarding screen shows contact_list screen

extract side-effects api to new interface SideEffectsApi.kt from Navigator.kt
extract fragment result api to FragmentResultApi.kt from Navigator.kt

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,6 +4,7 @@
     <string name="contact_list_title">Контакты</string>
     <string name="onboarding_title">Привет!</string>
     <string name="favorite_contacts_title">Избранные</string>
+    <string name="profile_title">Ваш профиль</string>
 
     <!--Bottom Navigation Items-->
     <string name="contacts">Контакты</string>
