add app name ru localization

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <!--App Name and Screen Titles-->
-    <string name="app_name">My Contacts</string>
+    <string name="app_name">Мои Контакты</string>
     <string name="contact_list_title">Контакты</string>
     <string name="onboarding_title">Привет!</string>
     <string name="favorite_contacts_title">Избранные</string>
