--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
 
     <!--Toolbar Custom Action Descriptions-->
     <string name="add_contact">Add Contact</string>
+    <string name="clear_all">Clear All Contacts</string>
     <string name="next">Next</string>
 
     <!--Contact PopupMenu Item Titles-->
@@ -47,6 +48,12 @@
     <string name="dont_ask_again">Close and don\'t ask again</string>
     <string name="make_calls">make calls</string>
     <string name="no_call_permission">No call permission exist</string>
+
+    <!--Confirmation Dialog-->
+    <string name="confirm_dialog_title">Are you sure?</string>
+    <string name="confirm_dialog_positive">Yes</string>
+    <string name="confirm_dialog_negative">No</string>
+    <string name="confirm_dialog_clear_contacts_message">All contacts will be deleted</string>
 
     <!--ExceptionMessagesToUser-->
     <string name="cant_call">Impossible to call</string>
