--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,6 +5,7 @@
     <string name="onboarding_title">Привет!</string>
     <string name="favorite_contacts_title">Избранные</string>
     <string name="profile_title">Ваш профиль</string>
+    <string name="contact_input_title">Ввод Контакта</string>
 
     <!--Bottom Navigation Items-->
     <string name="contacts">Контакты</string>
@@ -15,10 +16,9 @@
     <string name="avatar">аватар</string>
     <string name="add_to_favorites">добавить в избранное</string>
 
-    <!--Input Contact Dialog-->
+    <!--Input Contact Screen-->
     <string name="enter_contacts_name_hint">Введите Имя</string>
     <string name="enter_contacts_number_hint">Введите Номер</string>
-    <string name="input_contact">Ввод Контакта</string>
     <string name="confirm">Принять</string>
     <string name="cancel">Отмена</string>
     <string name="empty_value">Поле пустое!</string>
