--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="onboarding_title">Hello!</string>
     <string name="favorite_contacts_title">Favorite Contacts</string>
     <string name="profile_title">Your Profile</string>
+    <string name="contact_input_title">Input Contact</string>
 
     <!--Bottom Navigation Items-->
     <string name="contacts">Contacts</string>
@@ -15,10 +16,9 @@
     <string name="avatar">avatar</string>
     <string name="add_to_favorites">add to favorites</string>
 
-    <!--Input Contact Dialog-->
+    <!--Input Contact-->
     <string name="enter_contacts_name_hint">Enter Contact\'s Name</string>
     <string name="enter_contacts_number_hint">Enter Contact\'s Number</string>
-    <string name="input_contact">Input Contact</string>
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
     <string name="empty_value">Value is empty</string>
