--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,6 +15,7 @@
     <!--Image Descriptions-->
     <string name="avatar">аватар</string>
     <string name="add_to_favorites">добавить в избранное</string>
+    <string name="remove_photo">Удалить фотографию</string>
 
     <!--Contact List Screen-->
     <string name="empty_list_message_title">Список контактов пуст</string>
