--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <!--Image Descriptions-->
     <string name="avatar">avatar</string>
     <string name="add_to_favorites">add to favorites</string>
+    <string name="remove_photo">Remove photo</string>
 
     <!--Contact List Screen-->
     <string name="empty_list_message_title">Contact list is empty</string>
