start to adding profile screen
finish fragment_profile.xml

reorganize used m3 colors (change ?android:atrs/textColorOnPrimary to ?atrs/colorOnBackground)

extract a dark theme to themes.xml (day) and used a link to it (like parent) in themes.xml (night)

extract BaseViewModel.kt to describe viewModelScope (with Disptachers.Default)

realize ProfileRepository.kt (ProfileRepositoryImpl.kt) and ProfileViewModel.kt.

todo : realize ProfileFragment.kt

change way to get colorOnPrimary in MainActivity.kt

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -16,6 +16,7 @@
     <string name="avatar">аватар</string>
     <string name="add_to_favorites">добавить в избранное</string>
     <string name="remove_photo">Удалить фотографию</string>
+    <string name="profile_avatar">аватар профиля</string>
 
     <!--Contact List Screen-->
     <string name="empty_list_message_title">Список контактов пуст</string>
@@ -28,6 +29,12 @@
     <string name="confirm">Принять</string>
     <string name="cancel">Отмена</string>
     <string name="empty_value">Поле пустое!</string>
+
+    <!--Profile Screen-->
+    <string name="profile_statistics">Statistics:</string>
+    <string name="profile_contacts_count">Number of contacts:</string>
+    <string name="profile_fav_contacts_count">Number of favorite contacts:</string>
+    <string name="profile_data">Personal Data:</string>
 
     <!--OnBoarding Carousel Items-->
     <string name="onboarding1">Приложение My Contacts позволит вам хранить список своих контактов в удобном виде</string>
