--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -31,10 +31,12 @@
     <string name="empty_value">Поле пустое!</string>
 
     <!--Profile Screen-->
-    <string name="profile_statistics">Statistics:</string>
-    <string name="profile_contacts_count">Number of contacts:</string>
-    <string name="profile_fav_contacts_count">Number of favorite contacts:</string>
-    <string name="profile_data">Personal Data:</string>
+    <string name="profile_statistics">Статистика:</string>
+    <string name="profile_contacts_count">Кол-во контактов: %1$d</string>
+    <string name="profile_fav_contacts_count">Кол-во избранных контактов: %1$d</string>
+    <string name="profile_data">Личные данные:</string>
+    <string name="empty_name">Введите ваше имя</string>
+    <string name="empty_number">Введите свой номер</string>
 
     <!--OnBoarding Carousel Items-->
     <string name="onboarding1">Приложение My Contacts позволит вам хранить список своих контактов в удобном виде</string>
@@ -73,6 +75,7 @@
     <string name="confirm_dialog_sync_message">В приложение будут добавлены все контакты из телефона</string>
 
     <!--ExceptionMessages-->
+    <string name="fail">Возникла непредвиденная ошибка</string>
     <string name="call_failed">Невозможно осуществить звонок</string>
     <string name="sync_failed">Синхронизация неудачна</string>
     <string name="get_contact_list_failed">Получение списка контактов неудачно</string>
